feat(assignment) implement assignment detail UI

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -211,5 +211,56 @@
     "assignmentsToGrade": "Assignments to Grade",
     "enrolledCourses": "Enrolled Courses",
     "assignmentsDue": "Assignments Due"
+  },
+  "assignment": {
+    "assignments": "Assignments",
+    "assignment": "Assignment",
+    "title": "Title",
+    "description": "Description",
+    "instructions": "Instructions",
+    "question": "Question",
+    "questions": "Questions",
+    "points": "Points",
+    "totalPoints": "Total Points",
+    "timeLimit": "Time Limit",
+    "timeRemaining": "Time Remaining",
+    "minutes": "minutes",
+    "dueDate": "Due Date",
+    "submittedAt": "Submitted At",
+    "gradedAt": "Graded At",
+    "score": "Score",
+    "feedback": "Feedback",
+    "status": {
+      "draft": "Draft",
+      "available": "Available",
+      "overdue": "Overdue",
+      "submitted": "Submitted",
+      "graded": "Graded",
+      "late": "Late"
+    },
+    "startAssignment": "Start Assignment",
+    "submitAssignment": "Submit Assignment",
+    "submitting": "Submitting...",
+    "submitSuccess": "Assignment submitted successfully!",
+    "submitError": "Error submitting assignment",
+    "fetchError": "Error loading assignment",
+    "notFound": "Assignment not found",
+    "started": "Assignment started!",
+    "timeUp": "Time is up! Auto-submitting assignment...",
+    "completeAllQuestions": "Please answer all questions before submitting",
+    "manualGrading": "Your submission has been received and will be graded by your instructor",
+    "autoGraded": "Auto-graded",
+    "enterAnswer": "Enter your answer...",
+    "true": "True",
+    "false": "False",
+    "submissionResults": "Submission Results",
+    "progress": "Progress",
+    "questionsAnswered": "Questions Answered",
+    "completed": "Assignment completed!",
+    "notStarted": "Assignment not started",
+    "back": "Back",
+    "noAssignments": "No assignments found for this course",
+    "notPublished": "Not Published",
+    "timeLimitWarning": "You have {{minutes}} minutes to complete this assignment once you start."
   }
 }
