--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -285,5 +285,77 @@
     "completedDesc": "You have successfully submitted this assignment. Do you want to retake it?",
     "retake": "Retake Assignment",
     "canRetake": "You can now retake this assignment!"
+  },
+  "instructor": {
+    "dashboard": "Instructor Dashboard",
+    "courses": "Courses",
+    "lessons": "Lessons",
+    "assignments": "Assignments",
+    "statistics": "Statistics",
+    "addCourse": "Add Course",
+    "editCourse": "Edit Course",
+    "deleteCourse": "Delete Course",
+    "courseForm": {
+      "title": "Course Title",
+      "description": "Description",
+      "category": "Category",
+      "difficulty": "Difficulty",
+      "duration": "Duration (hours)",
+      "price": "Price (USD)",
+      "maxStudents": "Max Students",
+      "isPublished": "Published",
+      "save": "Save Course",
+      "cancel": "Cancel"
+    },
+    "table": {
+      "id": "ID",
+      "title": "Title",
+      "instructor": "Instructor",
+      "category": "Category",
+      "difficulty": "Difficulty",
+      "duration": "Duration",
+      "price": "Price",
+      "students": "Students",
+      "published": "Published",
+      "createdAt": "Created At",
+      "updatedAt": "Updated At",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "view": "View",
+      "loading": "Loading...",
+      "noData": "No data available",
+      "search": "Search...",
+      "filter": "Filter",
+      "rowsPerPage": "Rows per page",
+      "page": "Page",
+      "of": "of",
+      "first": "First",
+      "last": "Last",
+      "next": "Next",
+      "previous": "Previous"
+    },
+    "lessonForm": {
+      "title": "Lesson Title",
+      "description": "Description",
+      "videoUrl": "Video URL",
+      "duration": "Duration (minutes)",
+      "order": "Order",
+      "save": "Save Lesson"
+    },
+    "assignmentForm": {
+      "title": "Assignment Title",
+      "description": "Description",
+      "dueDate": "Due Date",
+      "totalPoints": "Total Points",
+      "isPublished": "Published",
+      "save": "Save Assignment"
+    },
+    "confirmDelete": {
+      "title": "Confirm Delete",
+      "message": "Are you sure you want to delete this {{type}}? This action cannot be undone.",
+      "confirm": "Delete",
+      "cancel": "Cancel"
+    }
   }
 }
