feat(assigment): modify api createAssignment, getInsutrctorCourses

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -237,6 +237,7 @@
     "gradedAt": "Graded At",
     "score": "Score",
     "feedback": "Feedback",
+    "statusLabel": "Status",
     "status": {
       "draft": "Draft",
       "available": "Available",
